# pega-vagas

./: .env.example  .gitignore  BEST_PRACTICES.md  CONTRIBUTING.md  IMPLEMENTACAO_V2.md  QUICKSTART.md  README.md  agents.md  config.yaml  debug_db_count.py  debug_gupy_api.py  errolog.md  get_group_id.py  list_models.py  lista_empresas.md  projeto.md  pyproject.toml  reprocess_jobs.py  test_gupy_api.py  test_notify_simple.py  test_telegram_dispatch.py  test_telegram_send.py  verify_gold.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  scrape.yaml
data/: .seen_jobs_test.json
data/gold/parquet/: dim_empresa.parquet  dim_localidade.parquet  dim_tempo.parquet  fact_vagas.parquet  vw_top_skills.parquet  vw_vagas_por_empresa.parquet  vw_vagas_por_regiao.parquet  vw_vagas_por_titulo.parquet
data/jobs/: sent_jobs.json  vagas_20260116_105252.json  vagas_20260116_105320.json  vagas_20260116_112011.json  vagas_20260116_123850.json  vagas_20260116_131329.json
src/: __init__.py  pipeline.py  quality_gate.py  quality_gate_v2.py  simple_pipeline.py
src/analytics/: __init__.py  models.py  transforms.py
src/config/: __init__.py  companies.py  config_loader.py  settings.py
src/ingestion/: __init__.py  browser.py  proxy_manager.py
src/notifications/: __init__.py  telegram.py  telegram_v2.py
src/processing/: __init__.py  html_cleaner.py  llm_extractor.py  normalizers.py  validators.py
src/schemas/: __init__.py  job.py
tests/: __init__.py  test_ingestion_search.py  test_models.py  test_normalizers.py  test_schemas.py  test_transforms.py
(+9 files in other folders)
